# native

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  CI_DASHBOARD_SUMMARY.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TODO.md  WORKSPACE  demo_ci_output.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/cli/: BUILD  commit_agent.py  main.py  memory_viewer.py  orchestrator.py  prompt_runner.py
apps/shell/: gui_concept.py
core/build_system/: content_addressable_storage.py  remote_executor.py
core/cache/: ai_response_cache.py
core/context_kernel/: hierarchical_store.py  memory_store.py  vector_store.py
demo_results/: demo-build.json  demo-build.xml  demo_standard_20250719_074756.json
devops/: auto_commit_agent.py  generate_ci_cd.py  generate_git_summaries.py  lint_and_format.py  remote_exec.py  update_todo.py
docs/: apps.cli.rst  apps.rst  apps.shell.rst  ci_dashboard.rst  ci_quick_reference.rst  conf.py  core.build_system.rst  core.cache.rst  core.context_kernel.rst  core.eval_core.rst  core.knowledge_graph.rst  core.meta_prompting.rst  core.plugin_system.rst  core.rst  core.thought_engine.rst  core.token_forge.rst  core.tool_chain.rst  devops.rst  index.rst  modules.rst  orchestration.rst  prompting.rst  prompting.system_prompts.rst  prompting.templates.rst  shared.config.rst  shared.rst  shared.schema.rst  shared.security.rst  shared.utils.rst  tests.rst  tests.unit.rst  tools.rst
orchestration/: agent_roles.py  conversation_logger.py  debugger.py
tools/: agent_tools.py
(+33 files in other folders)
