[tool.poetry]
name = "ai_native_systems"
version = "0.1.0"
description = "Modular AI-native system architecture for advanced agents."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "^3.7.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 