[tool.poetry]
name = "ai_native_systems"
version = "0.1.0"
description = "Modular AI-native system architecture for advanced agents."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
spacy = "^3.7.2"
typer = "^0.16.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-json-report = "^1.5.0"
black = "^24.3.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
sphinx = "^8.2.3"
sphinx_rtd_theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"